2009-11-19  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (c.TermDocumentMatrix): Added combine method for
	merging multiple term-document matrices.

2009-11-17  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R (setOldClass): Register S3 corpus classes to be
	recognized by S4 methods.

	* man/plot.Rd: Use \dontrun{} in \examples{} section in the hope
	that CRAN Mac OS X builds do not fail any longer.

2009-11-15  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (tokenize): Use scan(..., what = "character") instead
	of RWeka:AlphabeticTokenizer() as default.

2009-11-14  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (removeWords.PlainTextDocument): Fix bug which
	caused words at the beginning or the end of a line not to be removed. Do
	not delete whitespace anymore.

2009-11-12  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (DirSource): Default to working directory if no path
	is specified.

2009-11-11  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (DirSource): Stop on empty directories.

2009-11-07  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (TermDocumentMatrix): Avoid prefixes originating from
	named documents.

2009-10-21  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (removeWords): Improve regular expressions.

2009-10-19  Ingo Feinerer  <feinerer@logic.at>

	* R/meta.R (DublinCore): Allow lower case tags.

2009-10-09  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (GmaneSource, ReutersSource): Use xmlChildren(x)
	instead of x$children.

2009-09-15  Ingo Feinerer  <feinerer@logic.at>

	* R/preprocess.R (preprocessReut21578XML): Fix generated file names.

2009-09-06  Ingo Feinerer  <feinerer@logic.at>

	* R/: Use S3 instead of S4 class system.

2009-08-11  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readMail): Moved to tm.plugin.mail package.

2009-07-04  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readNewsgroup): Rename to readMail as newsgroup
	postings are basically e-mails with some extra headers.
